<resources>
    <string name="app_name">Blovote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Blovote App</string>
    <string name="nav_header_subtitle">by Ismail Khamitov</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="questions_descr">%s questions</string>
    <string name="hint_title">Title</string>
    <string name="respondents_count">Respondents count:</string>
    <string name="ten">10</string>
    <string name="reward_size">Reward size:</string>
    <string name="target_audience_filter_questions">Target audience filter questions</string>
    <string name="no_questions">No questions</string>
    <string name="main_questions">Main questions</string>
    <string name="create">Create</string>
    <string name="create_survey">Create survey</string>
    <string name="question_title">Title</string>
    <string name="question_type">Question category:</string>
    <string name="text_question_descr">Question hasn\'t points - respondents will provide text answer</string>
    <string name="question_type_dialog_title">Question category</string>
    <string name="add_question">Add question</string>
    <string name="msg_not_complete_question_title">Question should have title</string>
    <string name="msg_not_complete_point">Point %s cannot be empty</string>
    <string name="msg_complete_question_title">Complete the form</string>
    <string name="ok">OK</string>
    <string name="msg_question_no_points">Question should have at least one question</string>
    <string name="msg_title_empty">Title cannot be empty</string>
    <string name="msg_not_complete_respondents">Required respondents count must be positive integer number</string>
    <string name="msg_not_complete_reward_size">Reward size must be positive integer number</string>
    <string name="msg_survey_creation_not_complete">Complete creation form</string>
    <string name="msg_progress_survey_creation">Creating new survey…\nThis may take few minutes…</string>
    <string name="msg_filter_should_have_answer">Filter question should have right answer</string>
    <string name="state_name_new">New</string>
    <string name="state_new_active">Active</string>
    <string name="state_name_finished">Finished</string>
    <string name="survey_state">Survey state:</string>
    <string name="questions_count">Questions count:</string>
    <string name="start_survey">Start survey</string>
    <string name="survey">Survey</string>
    <string name="next">Next</string>
    <string name="text_answer">Text answer</string>
    <string name="question_answered">Survey is answered!</string>
    <string name="msg_survey_not_active">Survey is not active!</string>
    <string name="msg_loading_question_details">Loading question details…</string>
    <string name="msg_uploading_answer">Uploading answer…</string>
    <string name="msg_incorrect_answer">Incorrect answer</string>
    <string name="msg_error_uploading">Error occurred: %s</string>
    <string name="update">Update</string>
    <string name="msg_loading_surveys">Loading surveys…</string>
    <string name="msg_provide_answer">Answer should be provided</string>
    <string name="menu_title_wallet">My Wallet</string>
    <string name="title_balance">Current balance:</string>
    <string name="title_send_ether">Send Ether:</string>
    <string name="send">Send</string>
    <string name="recipient_address">Recipient address</string>
    <string name="message_ether_sent">Ether was successfully sent!</string>
    <string name="message_ether_sending_error">Error occurred sending Ether!</string>
    <string name="your_address">Your address:</string>
    <string name="all_surveys">All surveys</string>
    <string name="your_surveys">Your surveys:</string>
    <string name="my_surveys">My Surveys</string>
    <string name="current_respondents_count">Current respondents count:</string>
    <string name="view_results">View results</string>
    <string name="export_results">Export results</string>
    <string name="welcome_to_blovote">Welcome to Blovote!</string>
    <string name="message_you_need_wallet">You need an Ethereum wallet to use Blovote application</string>
    <string name="use_existing_wallet">Use existing wallet</string>
    <string name="create_new_wallet">Create new wallet</string>
    <string name="password">Password</string>
    <string name="loading">Loading…</string>
    <string name="error_init_wallet">Error initializing Ethereum wallet</string>
    <string name="msg_loading_wallet">Loading wallet…</string>
    <string name="loading_responds">Loading responds…</string>
    <string name="msg_passed_successfully">Survey was passed successfully</string>
    <string name="msg_survey_created">Survey created successfully</string>
    <string name="error">Error</string>
    <string name="msg_unable_to_create_survey">Unable to create survey</string>

    <string-array name="eth_unit">
        <item>wei</item>
        <item>Kwei</item>
        <item>Mwei</item>
        <item>Gwei</item>
        <item>microether</item>
        <item>milliether</item>
        <item>Eth</item>
    </string-array>

    <string-array name="filter_question_types_array">
        <item>Single variant</item>
        <item>Multi variant</item>
    </string-array>

    <string-array name="question_types_array">
        <item>Single variant</item>
        <item>Multi variant</item>
        <item>Text</item>
    </string-array>

    <string-array name="question_categories">
        <item>Target audience filter question</item>
        <item>Survey question</item>
    </string-array>
</resources>
