<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Blovote.Title"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:text="@string/welcome_to_blovote"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.Blovote.Body1"
        android:textAlignment="center"
        android:text="@string/message_you_need_wallet"/>


    <Button
        android:id="@+id/button_use_existing_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="144dp"
        style="@style/Widget.Blovote.Button.Colored"
        android:text="@string/use_existing_wallet"/>


    <Button
        android:id="@+id/button_create_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.Blovote.Button.Colored"
        android:text="@string/create_new_wallet"/>


    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="144dp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorAccentDark"
        android:visibility="gone"
        android:hint="@string/password" />


    <Button
        android:id="@+id/button_go_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        style="@style/Widget.Blovote.Button.Colored"
        android:text="@string/next"  />

</LinearLayout>