<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_weight="1"
    android:layout_alignParentTop="true"
    android:layout_above="@id/add_question_button">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:textStyle="bold"
            android:hint="@string/question_title"
            android:cursorVisible="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@android:color/transparent">
            <requestFocus/>
        </EditText>

        <View
            android:layout_height="0.5dp"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_type"
                android:textAppearance="@style/TextAppearance.Blovote.Body1"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner_question_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/question_types_array"/>

        </LinearLayout>

        <View
            android:layout_height="0.5dp"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"/>



        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_question_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_marginTop="8dp"/>

        <ImageButton
            android:id="@+id/button_add_point"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:tint="@color/colorAccentDark"
            android:background="@android:color/transparent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="36dp"
            app:srcCompat="@drawable/ic_add"/>


        <TextView
            android:id="@+id/text_view_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="48dp"
            android:text="@string/text_question_descr"
            android:textAppearance="@style/TextAppearance.Blovote.Body1"/>




    </LinearLayout>

</android.support.v4.widget.NestedScrollView>